Fix display of videos on mobile.

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -89,7 +89,8 @@ blockquote {
 
 #nonTextContent, footer, .book-page-nav, .header-logo, .book-section-text-close-button, 
 .book-section-text-divider, .book-section-text-open-button, .header-nav-button-desk,
-.nav-menu-footer, .landing-page-download-button {
+.nav-menu-footer, .landing-page-download-button, .book-section-video-player-scrub-canvas,
+.book-section-video-player-paint-canvas, .book-section-video-player-controls {
     display: none;
 }
 
@@ -801,6 +802,11 @@ blockquote {
     }
 
     .book-section-non-text-content video {
+        width: auto;
+        height: 100%;
+    }
+
+    .book-section-video-player {
         width: auto;
         height: 100%;
     }
